--- a/roles/glanceserver/tasks/main.yml
+++ b/roles/glanceserver/tasks/main.yml
@@ -26,7 +26,8 @@
     - { option: "project_name", value: service}
     - { option: "username", value: glance}
     - { option: "password", value: "{{ glance_identity_password }}" }
-
+    - { option: "region", value: "{{ region }}" }
+    - { option: "region_name", value: "{{ region }}" }
   notify:
   - restart glance-api
 
