--- a/site.yml
+++ b/site.yml
@@ -49,17 +49,18 @@
 #  roles:
 #    - role: keystone_population
 #
-- hosts: storage_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: glanceserver
-
-#- hosts: controller_nodes
+#- hosts: storage_nodes
 #  become: true
 #  gather_facts: no
 #  roles: 
-#    - role: placement
+#    - role: glanceserver
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: placement
+
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
