--- a/site.yml
+++ b/site.yml
@@ -36,40 +36,41 @@
 #  gather_facts: no
 #  roles:
 #    - role: openstackclient
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: keystoneserver
-     
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: keystone_population
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: keystoneserver
+#     
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: keystone_population
+#
+#- hosts: storage_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: glanceserver
 
-- hosts: storage_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: glanceserver
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
 #  roles: 
 #    - role: placement
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: novaserver
-#
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: novacompute
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: novaserver
+
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: novacompute
 #
 #- hosts: controller_nodes
 #  become: true
