--- a/site.yml
+++ b/site.yml
@@ -60,29 +60,29 @@
 #  roles: 
 #    - role: placement
 
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: novaserver
-
-- hosts: compute_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: novacompute
-#
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
-#  roles:
-#   - role: neutronserver
+#  roles: 
+#    - role: novaserver
 #
 #- hosts: compute_nodes
 #  become: true
 #  gather_facts: no
 #  roles:
-#    - role: neutron-agents-compute
+#    - role: novacompute
+#
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: neutronserver
+
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: neutron-agents-compute
 #
 #- hosts: controller_nodes
 #  become: true
