--- a/roles/keystoneserver/handlers/main.yml
+++ b/roles/keystoneserver/handlers/main.yml
@@ -1,3 +1,3 @@
-- name: restart apache2
-  service: name=apache2 state=restarted
+- name: restart keystone
+  service: name=keystone state=restarted
 
