--- a/roles/keystoneserver/tasks/main.yml
+++ b/roles/keystoneserver/tasks/main.yml
@@ -1,13 +1,8 @@
-- name: ensure keystone, apache2 and mod-wsgi-py3 packages are installed
+- name: ensure keystone is installed
   apt: name={{ item }}
   loop:
     - keystone
-    - apache2
-    - libapache2-mod-wsgi-py3
-
-- name: ensure keystone service is stopped and disabled
-  service: name=keystone state=stopped enabled=no
-
+ 
 - name: ensure keystone database connections is configured
   ini_file:
     path: /etc/keystone/keystone.conf
@@ -58,22 +53,8 @@
     owner: keystone
     group: keystone
     mode: 0644
-    
-- name: ensure wsgi-keystone.conf is present
-  template: >-
-    src=etc/apache2/sites-available/wsgi-keystone.conf
-    dest=/etc/apache2/sites-available/wsgi-keystone.conf
-    owner=root
-    group=root
-    mode=0644
-  notify: restart apache2
+  notify: restart keystone    
 
-- name: ensure virtual host wsgi is enabled
-  shell: /usr/sbin/a2ensite wsgi-keystone.conf
-  notify: restart apache2
-  
-- name: ensure apache is enabled and restarted
-  service: name=apache2 state=restarted enabled=yes
   
 - name: DB sync for keystone
   shell: /usr/bin/keystone-manage db_sync
@@ -82,9 +63,7 @@
   shell: /usr/bin/keystone-manage fernet_setup --keystone-user keystone --keystone-group keystone && keystone-manage credential_setup --keystone-user keystone --keystone-group keystone
 
 - name: bootstrap identity service
-  shell: keystone-manage bootstrap --bootstrap-password {{ admin_pass }} --bootstrap-admin-url http://{{ internal_ip }}:5000/v3/ --bootstrap-internal-url http://{{ internal_ip }}:5000/v3/  --bootstrap-public-url http://{{ controller_fqdn }}:5000/v3/   --bootstrap-region-id {{ region }}
-  register: kb
-  failed_when: "kb.rc not in [ 0, 1 ]"
-
+  shell: keystone-manage bootstrap --bootstrap-password {{ admin_pass }} --bootstrap-region-id {{ region }}
+  
  
   
