--- a/site.yml
+++ b/site.yml
@@ -36,11 +36,11 @@
 #  gather_facts: no
 #  roles:
 #    - role: openstackclient
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: keystoneserver
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: keystoneserver
 #     
 #- hosts: controller_nodes
 #  become: true
@@ -53,11 +53,11 @@
 #  gather_facts: no
 #  roles: 
 #    - role: glanceserver
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: placement
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: placement
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
