--- a/roles/placement/handlers/main.yml
+++ b/roles/placement/handlers/main.yml
@@ -1,2 +1,2 @@
-- name: restart apache2
-  service: name=apache2 state=restarted
+- name: restart placement
+  service: name=placement-api state=restarted
