--- a/site.yml
+++ b/site.yml
@@ -70,24 +70,24 @@
 #  roles:
 #    - role: novacompute
 
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: novadiscover
-
-
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
-#  roles:
-#   - role: neutronserver
-#
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: neutron-agents-compute
+#  roles: 
+#    - role: novadiscover
+
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: neutronserver
+
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: neutron-agents-compute
 #
 #- hosts: controller_nodes
 #  become: true
