--- a/site.yml
+++ b/site.yml
@@ -1,41 +1,41 @@
 ---
 
-- hosts: all
-  become: true
-  gather_facts: no
-  roles:
-    - role: common
-
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: dbserver
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: dbserver_population
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: rabbitserver
-#
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: etcd
-#
 #- hosts: all
 #  become: true
 #  gather_facts: no
 #  roles:
-#    - role: openstackclient
+#    - role: common
+#
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: dbserver
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: dbserver_population
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: rabbitserver
+
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: etcd
+
+- hosts: all
+  become: true
+  gather_facts: no
+  roles:
+    - role: openstackclient
 #
 #- hosts: controller_nodes
 #  become: true
