--- a/site.yml
+++ b/site.yml
@@ -6,49 +6,49 @@
 #  roles:
 #    - role: common
 #
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: dbserver
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: dbserver_population
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: rabbitserver
-
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: etcd
-
-- hosts: all
-  become: true
-  gather_facts: no
-  roles:
-    - role: openstackclient
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#   - role: dbserver
 #
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
 #  roles:
-#    - role: keystoneserver
-#     
+#   - role: dbserver_population
+#
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
 #  roles:
-#    - role: keystone_population
+#   - role: rabbitserver
 #
+#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#   - role: etcd
+#
+#- hosts: all
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: openstackclient
+#
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: keystoneserver
+     
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: keystone_population
+
 #- hosts: storage_nodes
 #  become: true
 #  gather_facts: no
