--- a/site.yml
+++ b/site.yml
@@ -43,11 +43,11 @@
 #  roles:
 #    - role: keystoneserver
 #     
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: keystone_population
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: keystone_population
 
 - hosts: storage_nodes
   become: true
