--- a/site.yml
+++ b/site.yml
@@ -43,12 +43,12 @@
 #  roles:
 #    - role: keystoneserver
 #     
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: keystone_population
-
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: keystone_population
+#
 - hosts: storage_nodes
   become: true
   gather_facts: no
