--- a/roles/glanceserver/tasks/main.yml
+++ b/roles/glanceserver/tasks/main.yml
@@ -6,7 +6,8 @@
     path: /etc/glance/glance-api.conf
     section: database
     option: connection
-    value: mysql+pymysql://glance:{{ glance_db_password }}@{{ internal_ip }}/glance
+    value: mysql+pymysql://glance:{{ glance_db_password }}@{{ hostvars[item]["internal_ip"] }}/glance
+  with_items: "{{ groups.controller_nodes }}"
   notify:
   - restart glance-api
 
@@ -17,9 +18,9 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "www_authenticate_uri", value: 'http://{{ internal_ip }}:5000' }
-    - { option: "auth_url", value: 'http://{{ internal_ip }}:5000' }
-    - { option: "memcached_servers", value: '{{ internal_ip }}:11211' }
+    - { option: "www_authenticate_uri", value: 'http://{{ hostvars["controller"]["internal_ip"] }}:5000' }
+    - { option: "auth_url", value: 'http://{{ hostvars["controller"]["internal_ip"] }}:5000' }
+    - { option: "memcached_servers", value: '{{ hostvars["controller"]["internal_ip"] }}:11211' }
     - { option: "auth_type", value: password }
     - { option: "project_domain_name", value: Default}
     - { option: "user_domain_name", value: Default}
