--- a/roles/glanceserver/tasks/main.yml
+++ b/roles/glanceserver/tasks/main.yml
@@ -18,9 +18,9 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "www_authenticate_uri", value: 'http://{{ hostvars["controller"]["internal_ip"] }}:5000' }
-    - { option: "auth_url", value: 'http://{{ hostvars["controller"]["internal_ip"] }}:5000' }
-    - { option: "memcached_servers", value: '{{ hostvars["controller"]["internal_ip"] }}:11211' }
+    - { option: "www_authenticate_uri", value: 'http://{{ hostvars[items]["internal_ip"] }}:5000' }
+    - { option: "auth_url", value: 'http://{{ hostvars[items]["internal_ip"] }}:5000' }
+    - { option: "memcached_servers", value: '{{ hostvars[items]["internal_ip"] }}:11211' }
     - { option: "auth_type", value: password }
     - { option: "project_domain_name", value: Default}
     - { option: "user_domain_name", value: Default}
@@ -29,6 +29,7 @@
     - { option: "password", value: "{{ glance_identity_password }}" }
     - { option: "region", value: "{{ region }}" }
     - { option: "region_name", value: "{{ region }}" }
+  with_items: "{{ groups.controller_nodes }}"
   notify:
   - restart glance-api
 
